--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "antd": "^5.24.0",
     "classnames": "^2.5.1",
+    "emoji-picker-react": "^4.12.0",
     "next": "14.2.24",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "use-immer": "^0.11.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
