--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@angelofana/emoji-json": "^15.1.1",
     "@ant-design/icons": "^5.6.1",
     "@ant-design/nextjs-registry": "^1.0.0",
     "antd": "^5.24.0",
     "classnames": "^2.5.1",
-    "emoji-picker-react": "^4.12.0",
     "next": "14.2.24",
     "react": "^18",
     "react-dom": "^18",
