--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angelofana/emoji-json": "^15.1.1",
     "@ant-design/icons": "^5.6.1",
     "@ant-design/nextjs-registry": "^1.0.0",
+    "ahooks": "^3.8.4",
     "antd": "^5.24.0",
     "classnames": "^2.5.1",
     "next": "14.2.24",
