--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ahooks": "^3.8.4",
     "antd": "^5.24.0",
     "classnames": "^2.5.1",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "next": "14.2.24",
     "react": "^18",
     "react-dom": "^18",
@@ -26,6 +28,7 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
