--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@angelofana/emoji-json": "^15.1.1",
+    "@ant-design/cssinjs": "^1.23.0",
     "@ant-design/icons": "^5.6.1",
     "@ant-design/nextjs-registry": "^1.0.0",
     "ahooks": "^3.8.4",
@@ -37,7 +38,6 @@
     "eslint-config-next": "14.2.5",
     "husky": "^9.1.7",
     "postcss": "^8",
-    "postcss-increase-specificity": "^0.6.0",
     "prettier": "^3.5.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
